--- a/src/lsp/defsys.lsp.in
+++ b/src/lsp/defsys.lsp.in
@@ -10,6 +10,7 @@
   '(
     (export	()		()			())
     (defmacro	()		()			())
+    (helpfile	()		()			())
 #-runtime
     (evalmacros	()		()			())
     (module	()		()			())
