--- a/src/configure.in
+++ b/src/configure.in
@@ -72,6 +72,9 @@ dnl 	threads="$enable_threads")
 dnl AC_ARG_ENABLE(runtime,
 dnl 	[--enable-runtime	Build no compiler.],
 dnl 	runtime="$enable_runtime")
+AC_ARG_ENABLE(shared,
+	[--disable-shared	Enable building dynamically loadable extensions.],
+	shared="$enable_shared")
 
 ### ----------------------------------------------------------------------
 ###           Checks for programs
@@ -149,6 +152,9 @@ if test ${boehm} ; then
 else
   EXTRA_OBJS="${EXTRA_OBJS} alloc.o gbc.o"
 fi
+if test ${shared} = "yes"; then
+  AC_DEFINE(ENABLE_DLOPEN)
+fi
 if test ${gmp} ; then
   AC_DEFINE(HAVE_LOCAL_GMP)
 else
@@ -158,7 +164,11 @@ fi
 if test ${runtime} ; then
   AC_DEFINE(RUNTIME)
 else
-  LSP_LIBRARIES="${LSP_LIBRARIES} libcmp.a"
+  if test ${shared} = "yes" ; then
+    LSP_LIBRARIES="${LSP_LIBRARIES} cmp.so"
+  else
+    LSP_LIBRARIES="${LSP_LIBRARIES} libcmp.a"
+  fi
 fi
 if test ${tk} ; then
   TKLIBS="-ltk -ltcl -lXpm @XLIBS@"
