+The compiler produced wrong code for RETURN-FROM forms inside an UNWIND-PROTECT. +Deftype BIT-VECTOR would not expand to a vector type. +Each compiled file has an entry point whose name is either  init_CODE() or another name based on the name of the source file.  The algorithm for computing these names has been slightly changed  so that the entry points of ECLS's own library do not conflict with  user defined entry points. +A LET/LET* form in which the initializers for a variable have not  the expected type produce a warning, but the code is accepted. For  instance (LET (V) (DECLARE (TYPE FIXNUM V)) (SETQ V 1)) now  compiles. +(SETF name), where name is a symbol, is now a valid function name in all  contexts. It is accepted by DEFUN, FUNCTION, FBOUNDP, FMAKUNBOUND, etc,  and it can be the on the function position in any form. +New specialized arrays for (UNSIGNED-BYTE 8) and (SIGNED-BYTE 8).

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,8 +47,8 @@ all:	$(TARGETS) doc
 %Makefile: $(srcdir)/%Makefile.in config.status
 	./config.status
 
-eclx$(EXE): ecls$(EXE) compile_rest.lsp
-	./ecls < compile_rest.lsp
+eclx$(EXE): ecls_min$(EXE) compile_rest.lsp
+	./ecls_min < compile_rest.lsp
 
 ecls$(EXE): ecls_min$(EXE) compile.lsp
 	./ecls_min < compile.lsp
