--- a/src/lsp/defsys.lsp.in
+++ b/src/lsp/defsys.lsp.in
@@ -33,6 +33,7 @@
 #-old-loop
     (loop2	()		()			())
     (defpackage ()		()			())
+    (ffi	()		()			())
 #-runtime
     (describe	()		()			())
     (top	()		()			())
