--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -32,7 +32,7 @@ HFILES	= ../h/config.h $(HDIR)/ecls.h $(HDIR)/ecls-cmp.h\
 	$(HDIR)/lwp.h $(HDIR)/critical.h
 OBJS	= main.o symbol.o package.o list.o\
 	apply.o eval.o interpreter.o compiler.o disassembler.o \
-	clos.o instance.o gfun.o lex.o reference.o character.o\
+	clos.o instance.o gfun.o reference.o character.o\
 	file.o read.o print.o error.o string.o cfun.o\
 	typespec.o assignment.o \
 	predicate.o big.o number.o\
