Patches for the patches for C++ compatibility

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -8,7 +8,7 @@ VPATH	= @srcdir@
 # Programs used by "make":
 #
 
-CC	= @CC@
+CC	= @ECL_CC@
 DEFS	= -D@host@
 LIBS	= @LIBS@ @TKLIBS@ @CLIBS@
 CFLAGS	= @CFLAGS@
