--- a/src/configure.in
+++ b/src/configure.in
@@ -81,19 +81,21 @@ AC_ARG_ENABLE(shared,
 AC_ARG_WITH(oldloop,
 	[--with-oldloop         Use the old MIT LOOP macro.],
 	oldloop="yes")
+AC_ARG_ENABLE(cxx,
+	[--enable-cxx           Build ECL using C++ compiler],
+	usecxx="$enable_cxx")
 
 ### ----------------------------------------------------------------------
 ###           Checks for programs
 ###
 AC_PROG_CC	      # sets variable CC
-if test "$GCC" != "yes"; then
-  AC_MSG_ERROR(Cannot build ECL without GCC)
-fi
+AC_PROG_CXX           # sets variable CXX
 AC_PROG_CPP           # sets variable CPP
 AC_PROG_RANLIB        # sets variable RANLIB
 AC_PROG_INSTALL       # sets variables INSTALL, INSTALL_DATA, INSTALL_PROGRAM
 AC_PROG_LN_S          # sets variable LN_S
 AC_EXEEXT dnl			Guess whether .exe is needed for executables
+AC_SUBST(ECL_CC)dnl		Which compiler should we use for building ECL
 AC_SUBST(CFLAGS)dnl		Flags for the compiler
 AC_SUBST(LSPCFLAGS)dnl		Additional flags needed to compile translated code
 AC_SUBST(CLIBS)dnl		System libraries to be linked in
@@ -205,6 +207,11 @@ if test "${threads}" ; then
   EXTRA_OBJS="${EXTRA_OBJS} lwp.o"
   AC_DEFINE(THREADS)
 fi
+if test "${usecxx}" ; then
+  ECL_CC="${CXX}"
+else
+  ECL_CC="${CC}"
+fi
 
 dnl ----------------------------------------------------------------------
 dnl		Study the call conventions
@@ -272,7 +279,8 @@ else
   if mkdir gmp; then
    (cd gmp;
      $srcdir/gmp/configure --disable-shared --prefix=$bindir \
-	--includedir=${builddir}/h --libdir=${builddir} $gmp_flags)
+	--infodir=${builddir}/doc --includedir=${builddir}/h \
+        --libdir=${builddir} $gmp_flags)
   fi
 fi
 dnl ---------------------------------------------------------------------
