Add support for Mac OSX, which means - Enable simple allocator to use mmap() - Rewrite cmpwt.lsp so that it produces files with short lines and ANSI strings - Fix mkdir so that it accepts a parameter for the mode

--- a/src/ansi-tests/Makefile.in
+++ b/src/ansi-tests/Makefile.in
@@ -13,7 +13,7 @@ ecl:
 	 echo '(setf (logical-pathname-translations "SYS")'; \
 	 echo "      '"'(("*.*" "../*.*")))'; \
 	 echo "(run-all-tests \"$(srcdir)/\")"; \
-	 echo "(quit)") | ../ecl
+	 echo "(quit)") | ../ecl -dir ../
 	true
 
 ecl_min:
