--- a/src/configure.in
+++ b/src/configure.in
@@ -55,16 +55,16 @@ AC_ARG_WITH(tcp,
 	tcp="yes")
 AC_ARG_ENABLE(boehm,
 	[--disable-boehm        Disable Boehm's garbage collector.],
-	boehm="${enableval}", boehm="yes")
+	boehm="${enableval}",boehm="yes")
 AC_ARG_ENABLE(local-boehm,
 	[--enable-local-boehm   Use already installed Boehm GC library.],
-	local_boehm="${enableval}"; boehm="yes")
+	[local_boehm="${enableval}" boehm="yes"],local_boehm="no")
 AC_ARG_ENABLE(local-gmp,
 	[--enable-local-gmp     Use already installed GMP library.],
-	local_gmp="${enableval}")
+	local_gmp="${enableval}",local_gmp="no")
 AC_ARG_WITH(gmp,
 	[--with-gmp=args        Configure supplied GMP library with arguments.],
-	[gmp_flags=$withval; enable_local_gmp=no],
+	[gmp_flags=${withval}; local_gmp="no"],
 	gmp_flags="")
 dnl AC_ARG_ENABLE(locative,
 dnl 	[--enable-locative      Include locative support.],
@@ -83,7 +83,7 @@ AC_ARG_WITH(oldloop,
 	oldloop="yes")
 AC_ARG_ENABLE(cxx,
 	[--enable-cxx           Build ECL using C++ compiler],
-	usecxx="$enable_cxx")
+	usecxx=${enableval},usecxx="no")
 
 ### ----------------------------------------------------------------------
 ###           Checks for programs
@@ -127,6 +127,7 @@ AC_CHECK_HEADERS(sys/resource.h)
 AC_CHECK_HEADERS(sys/utsname.h)
 AC_CHECK_HEADERS(float.h)
 AC_CHECK_FUNCS(nanosleep)
+AC_CHECK_FUNCS(isnanf)
 AC_ISC_POSIX
 
 dnl ----------------------------------------------------------------------
@@ -152,9 +153,11 @@ LIBRARIES="libecl.a"
 LSP_LIBRARIES="liblsp.a libclos.a"
 SUBDIR=c
 CLIBS="${CLIBS} -lgmp -lm"
-if test ${boehm} ; then
+if test ${boehm} = "no" ; then
+  EXTRA_OBJS="${EXTRA_OBJS} alloc.o gbc.o"
+else
   LIBRARIES="${LIBRARIES} libgc.a"
-  if test ${local_boehm}; then
+  if test ${local_boehm} = "no"; then
     BOEHM_HEADERS=""
   else
     LIBRARIES="${LIBRARIES} libgc.a"
@@ -164,13 +167,11 @@ if test ${boehm} ; then
   CLIBS="-lgc ${CLIBS}"
   EXTRA_OBJS="${EXTRA_OBJS} alloc_2.o"
   AC_DEFINE(GBC_BOEHM)
-else
-  EXTRA_OBJS="${EXTRA_OBJS} alloc.o gbc.o"
 fi
 if test ${shared} = "yes"; then
   AC_DEFINE(ENABLE_DLOPEN)
 fi
-if test ! ${local_gmp} ; then
+if test ${local_gmp} = "no" ; then
   LIBRARIES="${LIBRARIES} libgmp.a"
   SUBDIR="${SUBDIR} gmp"
 fi
@@ -207,10 +208,10 @@ if test "${threads}" ; then
   EXTRA_OBJS="${EXTRA_OBJS} lwp.o"
   AC_DEFINE(THREADS)
 fi
-if test "${usecxx}" ; then
-  ECL_CC="${CXX}"
-else
+if test ${usecxx} = "no" ; then
   ECL_CC="${CC}"
+else
+  ECL_CC="${CXX}"
 fi
 
 dnl ----------------------------------------------------------------------
@@ -271,7 +272,7 @@ dnl ---------------------------------------------------------------------
 dnl		GNU multiprecision library
 dnl
 AC_MSG_CHECKING(checking for gmp...)
-if test ${local_gmp} ; then
+if test ${local_gmp} = "yes" ; then
   AC_MSG_RESULT(already installed)
 else
   AC_MSG_RESULT(configuring local copy)
@@ -287,9 +288,9 @@ dnl ---------------------------------------------------------------------
 dnl		Boehm-Weiser garbage collector
 dnl
 AC_MSG_CHECKING(checking for Boehm-Weiser gc...)
-if test ${local_boehm} ; then
-  AC_MSG_RESULT(already installed)
-else
+if test ${boehm} = "no"; then
+  AC_MSG_RESULT(use small collector instead)
+elif test "${local_boehm}" = "no" ; then
   AC_MSG_RESULT(configuring local copy)
   test -d gc && rm -rf gc
   if mkdir gc; then
@@ -297,6 +298,8 @@ else
      $srcdir/gc/configure --disable-shared --prefix=$bindir \
 	--includedir=${builddir}/h --libdir=${builddir})
   fi
+else
+  AC_MSG_RESULT(already installed)
 fi
 dnl ---------------------------------------------------------------------
 dnl		Final pass over configuration files
