Implicit suffix rule may cause problems with gnumake. Replaced with pattern rule which forces users of BSD systems to install gmake.

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -47,9 +47,9 @@ OBJS	= main.o symbol.o package.o list.o\
 
 .SUFFIXES: .c .o .d
 
-.c.o: $(HFILES)
+%.o: %.c $(HFILES)
 	$(CC) $(CFLAGS) -o $@ $<
-.d.c: $(DPP) $(HFILES)
+%.c: %.d $(DPP) $(HFILES)
 	$(DPP) $< $@
 
 all:	$(DPP) ../libecl.a cinit.o
