--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -102,7 +102,7 @@ doc: $(TARGETS)
 	cd doc; $(MAKE)
 
 clean: clean_lisp
-	for i in ${SUBDIR}; do (cd $$i; make clean); done
+	for i in ${SUBDIR}; do (cd $$i; $(MAKE) clean); done
 	$(RM) ecl_min$(EXE) ecl$(EXE) help.doc core a.out
 	$(RM) config.version config.log config.cache
 	$(RM) *.c *.o *.a *.h *.data
@@ -112,22 +112,22 @@ clean_lisp:
 distclean: clean
 realclean: distclean
 test1:
-	cd c; make
-	make ecl_min
-	make ecl
-	cd tests; make
+	cd c; $(MAKE)
+	$(MAKE) ecl_min
+	$(MAKE) ecl
+	cd tests; $(MAKE)
 	diff tests tests2
 test2:
-	make clean_lisp
-	cd c; make
-	make ecl_min
+	$(MAKE) clean_lisp
+	cd c; $(MAKE)
+	$(MAKE) ecl_min
 	$(RM) ecl
-	make ecl
+	$(MAKE) ecl
 	for i in lsp clos cmp; do diff --exclude=\*.o $$i old/$$i; done
 test3:
 	-mkdir stage2
 	cp -rf lsp clos cmp stage2
 	-for i in lsp cmp clos clx tk; do test -f lib$$i.a && mv lib$$i.a stage2; done
-	make clean_lisp
+	$(MAKE) clean_lisp
 	./ecl < compile2.lsp
 	for i in lsp clos cmp clx tk; do test -d $$i && diff --exclude=\*.o $$i stage2/$$i; done
