Use ISO-C99 functions to extract exponents, mantisas, etc, instead of old tricks based on the binary representation of numbers.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -87,3 +87,5 @@
 #undef HAVE_NANOSLEEP
 /* Float version if isnan()						*/
 #undef HAVE_ISNANF
+/* float.h for epsilons, maximum real numbers, etc			*/
+#undef HAVE_FLOAT_H
