The interface for CLOS streams is cleared. First, output_ch_fun and read_ch_fun disappear. All code pertaining CLOS streams is moved to file.d. This code allows the user to supply an arbitrary object instead of a stream. The object must have the following methods defined: STREAM-READ-CHAR, STREAM-UNREAD-CHAR, STREAM-LISTEN, STREAM-CLEAR-INPUT, STREAM-WRITE-CHAR, STREAM-CLEAR-OUTPUT, STREAM-FORCE-OUTPUT, STREAM-CLOSE. With these methods it can be used for input and output. This implementation of streams is enabled with the flag --with-clos-streams during configuration phase.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -46,6 +46,9 @@
 /* Undefine this if you do not want ECL to check for circular lists    */
 #define ECL_SAFE
 
+/* Allow STREAM operations to work on arbitrary objects			*/
+#undef ECL_CLOS_STREAMS
+
 /* -------------------------------------------------------------------- *
  *	PARAMETERS							*
  * -------------------------------------------------------------------- */
