--- a/src/configure.in
+++ b/src/configure.in
@@ -81,6 +81,9 @@ AC_ARG_ENABLE(shared,
 AC_ARG_WITH(oldloop,
 	[--with-oldloop         Use the old MIT LOOP macro.],
 	oldloop="yes")
+AC_ARG_WITH(clos-streams,
+	[--with-clos-streams    Allow user defined stream objects.],
+	closstreams="yes")
 AC_ARG_ENABLE(cxx,
 	[--enable-cxx           Build ECL using C++ compiler],
 	usecxx=${enableval},usecxx="no")
@@ -198,6 +201,9 @@ if test "${tcp}" -o "${clx}"; then
 fi
 if test "${oldloop}"; then
   AC_DEFINE(ECL_OLD_LOOP)
+fi
+if test "${closstreams}"; then
+  AC_DEFINE(ECL_CLOS_STREAMS)
 fi
 if test "${locative}" ; then
   EXTRA_OBJS="${EXTRA_OBJS} unify.o"
