--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -43,7 +43,7 @@ OBJS	= main.o symbol.o package.o list.o\
 	time.o unixint.o\
 	mapfun.o multival.o hash.o format.o pathname.o\
 	structure.o load.o unixfsys.o unixsys.o \
-	all_keywords.o all_symbols.o all_functions.o init.o @EXTRA_OBJS@
+	all_symbols.o all_functions.o init.o symbols_def.o @EXTRA_OBJS@
 
 .SUFFIXES: .c .o .d
 
@@ -67,8 +67,8 @@ clean:
 
 # Build rules
 
-$(DPP): $(srcdir)/dpp.c
-	$(TRUE_CC) @CFLAGS@ -I$(HDIR) $(srcdir)/dpp.c  -o $@
+$(DPP): $(srcdir)/dpp.c $(srcdir)/symbols_list.h $(srcdir)/functions_list.h
+	$(TRUE_CC) @CFLAGS@ -I../h -I$(HDIR) $(DEFS) $(srcdir)/dpp.c  -o $@
 
 #
 # Some files may break due to gcc optimizations
@@ -77,6 +77,10 @@ $(DPP): $(srcdir)/dpp.c
 # dangerous to optimize due to assembler hack
 #	$(CC) $(CFLAGS) -O0 -g apply.c -o $@
 assignment.o: assignment.c $(HFILES)
-	$(CC) $(CFLAGS) -g assignment.c -o $@
+	$(CC) $(CFLAGS) assignment.c -o $@
 gbc.o: gbc.c $(HFILES)
-	$(CC) $(CFLAGS) -g gbc.c -o $@
+	$(CC) $(CFLAGS) gbc.c -o $@
+symbols_def.o: $(srcdir)/symbols_list.h
+	echo '#include "ecl.h"' > symbols_def.c
+	cat $(srcdir)/symbols_list.h | grep 'SW("' | grep -v 'NULL[,)]' | sed 's/SW(".*&\([a-zA-Z_0-9]*\)),/cl_object \1;/g' >> symbols_def.c
+	$(CC) $(CFLAGS) symbols_def.c -o $@
