Verbose loading of files. Helps in debugging errors in the library.

--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -1,34 +1,34 @@
 
-(load "@srcdir@/export.lsp")
-(load "@srcdir@/defmacro.lsp")
-(load "@srcdir@/helpfile.lsp")
-(load "@srcdir@/evalmacros.lsp")
-(load "@srcdir@/module.lsp")
-(load "@srcdir@/autoload.lsp")
-(load "@srcdir@/describe.lsp")
-(load "@srcdir@/setf.lsp")
-(load "@srcdir@/predlib.lsp")
-(load "@srcdir@/arraylib.lsp")
-(load "@srcdir@/assert.lsp")
-(load "@srcdir@/defstruct.lsp")
-(load "@srcdir@/iolib.lsp")
-(load "@srcdir@/listlib.lsp")
-(load "@srcdir@/mislib.lsp")
-(load "@srcdir@/numlib.lsp")
-(load "@srcdir@/packlib.lsp")
-(load "@srcdir@/seq.lsp")
-(load "@srcdir@/seqlib.lsp")
-(load "@srcdir@/trace.lsp")
-(load "@srcdir@/ansi.lsp")
+(load "@srcdir@/export.lsp" :verbose t)
+(load "@srcdir@/defmacro.lsp" :verbose t)
+(load "@srcdir@/helpfile.lsp" :verbose t)
+(load "@srcdir@/evalmacros.lsp" :verbose t)
+(load "@srcdir@/module.lsp" :verbose t)
+(load "@srcdir@/autoload.lsp" :verbose t)
+(load "@srcdir@/describe.lsp" :verbose t)
+(load "@srcdir@/setf.lsp" :verbose t)
+(load "@srcdir@/predlib.lsp" :verbose t)
+(load "@srcdir@/arraylib.lsp" :verbose t)
+(load "@srcdir@/assert.lsp" :verbose t)
+(load "@srcdir@/defstruct.lsp" :verbose t)
+(load "@srcdir@/iolib.lsp" :verbose t)
+(load "@srcdir@/listlib.lsp" :verbose t)
+(load "@srcdir@/mislib.lsp" :verbose t)
+(load "@srcdir@/numlib.lsp" :verbose t)
+(load "@srcdir@/packlib.lsp" :verbose t)
+(load "@srcdir@/seq.lsp" :verbose t)
+(load "@srcdir@/seqlib.lsp" :verbose t)
+(load "@srcdir@/trace.lsp" :verbose t)
+(load "@srcdir@/ansi.lsp" :verbose t)
 #+old-loop
-(load "@srcdir@/loop.lsp")
+(load "@srcdir@/loop.lsp" :verbose t)
 #-old-loop
-(load "@srcdir@/loop2.lsp")
-(load "@srcdir@/defpackage.lsp")
-(load "@srcdir@/ffi.lsp")
+(load "@srcdir@/loop2.lsp" :verbose t)
+(load "@srcdir@/defpackage.lsp" :verbose t)
+(load "@srcdir@/ffi.lsp" :verbose t)
  #+threads
-(load "@srcdir@/threads.lsp")
+(load "@srcdir@/threads.lsp" :verbose t)
  #+tk
-(load "@srcdir@/tk-init.lsp")
-(load "@builddir@/lsp/config.lsp")
-(load "@srcdir@/top.lsp")
+(load "@srcdir@/tk-init.lsp" :verbose t)
+(load "@builddir@/lsp/config.lsp" :verbose t)
+(load "@srcdir@/top.lsp" :verbose t)
