--- a/src/configure.in
+++ b/src/configure.in
@@ -56,6 +56,7 @@ AC_ARG_WITH(tcp,
 dnl AC_ARG_ENABLE(boehm,
 dnl	[--disable-boehm        Disable Boehm's garbage collector.],
 dnl	boehm="${enableval}",boehm="yes")
+boehm="yes"
 AC_ARG_ENABLE(local-boehm,
 	[--enable-local-boehm   Use already installed Boehm GC library.],
 	[local_boehm="${enableval}" boehm="yes"],local_boehm="no")
