--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -73,33 +73,20 @@ libgmp.a:
 BUILD-STAMP: config.status
 	(echo "#"; uname -a) > $@
 	head -8 config.status | tail -6 >> $@
-directory:
-	test -d $(DIRECTORY) || (mkdir $(DIRECTORY); chmod 755 $(DIRECTORY))
 install: BUILD-STAMP
-	for i in $(TARGETS); do	\
-	  $(INSTALL_PROGRAM) $$i $(PREFIX)$(bindir); \
-	  strip $(PREFIX)$(bindir)/$$i; \
-	done
+	$(INSTALL) -d $(PREFIX)$(bindir) $(PREFIX)$(mandir) $(PREFIX)$(libdir)/h
+	$(INSTALL_PROGRAM) -s $(TARGETS) $(PREFIX)$(bindir)
 	$(INSTALL_DATA) $(srcdir)/etc/ecl.1 $(PREFIX)$(mandir)
-	$(MAKE) directory DIRECTORY=$(PREFIX)$(libdir)
-	$(MAKE) directory DIRECTORY=$(PREFIX)$(libdir)/h
-	$(INSTALL_DATA) BUILD-STAMP $(PREFIX)$(libdir)
+	$(INSTALL_DATA) BUILD-STAMP $(LSP_LIBRARIES) $(LIBRARIES) $(PREFIX)$(libdir)
 	$(INSTALL_DATA) h/config.h $(PREFIX)$(libdir)/h
-	for i in $(LSP_LIBRARIES) $(LIBRARIES); do \
-	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir); \
-	done
 	$(INSTALL_DATA) help.doc $(PREFIX)$(libdir)
 	if (echo $(SUBDIR) | grep gc); then $(MAKE) installgc; fi
 	cd c; $(MAKE) PREFIX="$(PREFIX)" install
 	cd doc; $(MAKE) PREFIX="$(PREFIX)" install
 installgc:
-	$(MAKE) directory DIRECTORY=$(PREFIX)$(libdir)/h/private
-	for i in $(srcdir)/gc/include/*.h; do \
-	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir)/h/; \
-	done
-	for i in $(srcdir)/gc/include/private/*.h; do \
-	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir)/h/private/; \
-	done
+	$(INSTALL) -d $(PREFIX)$(libdir)/h/private
+	$(INSTALL_DATA) $(srcdir)/gc/include/*.h $(PREFIX)$(libdir)/h/
+	$(INSTALL_DATA) $(srcdir)/gc/include/private/*.h $(PREFIX)$(libdir)/h/private/
 
 uninstall:
 	rm -rf $(mandir)/ecl.1
